Added migrations, DTO's Service, controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Default": "@\"Data Source=db-mssql;Initial Catalog=s12345;Integrated Security=True\""
+  },
   "AllowedHosts": "*"
 }
